@@ -1608,6 +1608,13 @@ command to generate the output files.
     </magic>
     <glob pattern="*.oleo"/>
   </mime-type>
+  <mime-type type="application/x-pak">
+    <comment>PAK archive</comment>
+    <magic priority="80">
+      <match offset="0" type="string" value="PACK" />
+    </magic>
+    <glob pattern="*.pak" />
+  </mime-type>
   <mime-type type="application/x-palm-database">
     <_comment>Palm OS database</_comment>
     <glob pattern="*.pdb"/>
