@@ -1,5 +1,10 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add PAK archive type (#10030).
+	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add TNEF message MIME type (#10077).
 	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
 
